<resources>
    <string name="app_name">P26Dorio</string>
    <string name="popup">Te has conectado.</string>
    <string name="hint">Enter text</string>
    <string name="br">Broadcast</string>
    <string name="ser_sw">Counting service switch</string>
    <string name="ser_sw_bind">Binded counting service switch</string>
    <string name="ser_sw_back">Background counting service switch</string>
    <string name="set">Set</string>
    <string name="get">Get</string>
</resources>